<resources>
    <string name="app_name">ConfiguracaoPersonagem</string>
    <string name="titulo_criar_personagem">Crie seu personagem</string>
    <string name="label_nome">Nome</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_masculino">Masculino</string>
    <string name="label_feminino">Feminino</string>
    <string name="label_forca">Força</string>
    <string name="label_classe">Classe</string>
    <string name="botao_criar">Criar</string>
    <string name="label_rodape">Desenvolvido por Vitor Cesário</string>
    <string name="mago">Mago</string>
    <string name="guerreiro">Guerreiro</string>
    <string name="arqueiro">Arqueiro</string>
    <string name="bardo">Bardo</string>
    <string name="assassino">Assassino</string>
    <string name="curandeiro">Curandeiro</string>
    <string name="anao">Anão</string>
</resources>
