<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.configuracaopersonagem.PersonagemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cabecalho">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_criar_personagem"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="16dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/cabecalho"
        android:layout_above="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome"/>

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo"/>

            <RadioGroup
                android:id="@+id/rdSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_masculino"/>
                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_feminino"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_classe"/>

            <Spinner
                android:id="@+id/spClasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/classes"/>

            <ImageView
                android:src="@drawable/anao"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:id="@+id/ivClasse"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_forca"/>

            <TextView
                android:id="@+id/tvForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"/>

            <SeekBar
                android:id="@+id/sbForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"/>

            <Button
                android:id="@+id/btCriar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botao_criar"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_rodape"
            />
    </RelativeLayout>

</RelativeLayout>
